# conflux

./: .env.example  .gitignore  CLAUDE.md  README.md  db.py  main.py  policy_retriever.py  proposals.py  pyproject.toml  render.yaml  requirements-render.txt  research.py
.commandcode/taste/: taste.md
.github/workflows/: ingest.yml
app/: __init__.py
app/api/routes/: clusters.py  health.py  ingest.py  proposals.py  research.py  threads.py
app/core/: config.py  database.py  models.py
app/services/: cluster_service.py  proposal_heuristics.py  thread_service.py  utils.py
data/: local_clusters.json  local_threads.json  local_threads_geojson.json
docs/: ARCHITECTURE_AND_DATA_DESIGN.md  deployment.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: MapClient.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/components/: Header.tsx  IssueBrowser.tsx  LocalityPreviewMap.tsx  MapSection.tsx  PlanningAnalysisPanel.tsx  ResearchSidebar.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  issues.ts  types.ts
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-10/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
policy_docs/: delhi_drainage_water.md  delhi_lighting_safety.md  delhi_road_safety.md  delhi_sanitation_public_space.md
src/ingestor/: __init__.py  reddit.py
tests/: test_core.py
worker/: clustering.py  geocoding.py  ingest.py  ingest_and_cluster.py
