[project]
name = "conflux"
version = "0.1.0"
description = "Civic-tech AI platform transforming citizen complaints into structured urban intelligence."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Lothnic" }
]
dependencies = [
    "fastapi>=0.136.1",
    "geopy>=2.4.1",
    "hdbscan>=0.8",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.29",
    "umap-learn>=0.5.12",
    "uvicorn[standard]>=0.47.0",
]
